<resources>
    <string name="app_name">Minesweeper</string>

    <!--String für Spielregeln und Game-->
    <string name="instruction_part1">Ziel des Spiels ist es, innerhalb eines Zeitlimits von 999 Sekunden alle Felder aufzudecken, die keine Mine enthalten. Sobald eine Mine aufgedeckt wurde, ist das Spiel verloren. Die Zahl auf einem aufgedeckten Feld gibt an, wie viele Minen an dieses Feld angrenzen. Dabei sind auch diagonal angrenzende Felder gemeint.</string>
    <string name="laufendes_spiel">Laufendes Spiel</string>
    <string name="intructions_image_text1">Laufendes Spiel mit markierten Minen</string>
    <string name="spielregeln">Spielregeln</string>
    <string name="zurueck_button">Zurück Button</string>
    <string name="spiel_verloren">Spiel verloren</string>
    <string name="instructions_image_text2">Eine Mine wurde aufgedeckt und das Spiel verloren</string>
    <string name="instruction_part2">Die Anzahl der noch verbleibenden Minen und die aktuell verstrichene Zeit wird am oberen Bildschirmrand angezeigt. Durch das Setzen von Flaggen wird die Anzahl verbleibender Minen verringert. Die Anzahl der Felder und Minen ist abhängig vom ausgewählten Schwierigkeitsgrad.</string>
    <string name="counter_und_timer">Counter und Timer</string>
    <string name="instruction_part3">Das Spiel enthält zwei Modi, den Minen Modus und den Flaggen-Modus. Der Modus kann während des Spiels jederzeit am unteren Bildschirmrand gewechselt werden.</string>
    <string name="spielmodi">Spielmodi</string>
    <string name="minen_modus">Minen-Modus</string>
    <string name="instruction_part5">Im Minen-Modus kann durch einfaches Tippen auf den Bildschirm ein Feld aufgedeckt werden. Durch gedrückt halten auf ein Feld, wird eine Flagge gesetzt. Flaggen können nicht auf bereits aufgedeckte Felder gesetzt werden, oder wenn noch kein Feld aufgedeckt wurde.</string>
    <string name="instruction_part6">Flaggen-Modus</string>
    <string name="instruction_part7">Im Flaggen-Modus wird durch kurzes Tippen auf den Bildschirm eine Flagge gesetzt und durch gedrückt halten ein Fragezeichen werden. Fragezeichen können durch Flaggen ersetzt werden und umgekehrt. Ein Feld mit einer Flagge oder einem Fragezeichen kann nicht aufgedeckt werden. Dazu muss die Markierung erst wieder entfernt werden.</string>
    <string name="flaggen_und_fragezeichen">Flaggen und Fragezeichen</string>
    <string name="instruction_image_text3">Es wurden Flaggen und Fragezeichen gesetzt</string>
    <string name="instruction_part8">Möchtest du noch weitere Herausforderungen?</string>
    <string name="instruction_part9">Du kannst in den Einstellungen den Flaggen-Modus, den Minenzähler, den Timer oder auch einfach alles nach belieben ausschalten.</string>
    <string name="reset_game">Reset Game</string>
    <string name="_0">0</string>
    <string name="minen_modus_game">Minen - Modus</string>
    <string name="flaggen_modus_game">Flaggen - Modus</string>
    <string name="icon_mine">Icon Mine</string>
    <string name="icon_timer">Icon Timer</string>
    <string name="noch_einmal_versuchen">Noch einmal versuchen?</string>

    <string name="schwierigkeitsgrad">Schwierigkeitsgrad</string>
    <string name="zeit">Zeit</string>
    <string name="gefundene_minen">Gefundene Minen</string>
    <string name="felder">Felder</string>
    <string name="instructions_part10">Immernoch nicht genug? Schalte die Flaggen-Funktion komplett ab und gewinne das Spiel, ohne die Flaggen markieren zu können.</string>

    <!--Dialog Spielende (Gewonnen oder Verloren)-->
    <string name="message_spiel_gewonnen">Du hast gewonnen!</string>
    <string name="message_spiel_verloren">Du hast verloren!</string>
    <string name="level_anfänger">Anfänger</string>
    <string name="level_fortgeschritten">Fortgeschritten</string>
    <string name="level_profi">Profi</string>
    <string name="level_benutzedefiniert">Benutzerdefiniert</string>
    <string name="neues_spiel_ja">Ja</string>
    <string name="neues_spiel_nein">Nein</string>
    <string name="sekunden">Sekunden</string>

    <!--Hauptmenü-->
    <string name="light_darkmode" translatable="false">Light- / Darkmode</string>
    <string name="spielen">Spielen</string>
    <string name="spiel_erstellen">Spiel erstellen</string>
    <string name="spieltitel">Spieltitel</string>
    <string name="spielanleitung">Spielanleitung</string>
    <string name="minenanzahl_im_spiel">Anzahl der Minen im Spiel</string>

    <string name="startet_neues_spiel">Startet ein neues Spiel</string>
    <string name="eigenes_spiel_erstellen">Ein eigenes Spiel erstellen</string>
    <string name="oeffnet_spielanleitung">Öffnet die Spielanleitung</string>
    <string name="zu_spielstatistiken">Zu den Spielstatistiken</string>
    <string name="zu_einstellungen"> Zu den Einstellungen</string>



    <!--Spiel erstellen-->
    <string name="hoehe">Höhe</string>
    <string name="breite">Breite</string>
    <string name="minenanzahl">Minenanzahl</string>

    <string name="height_helper_text_1">Mindestens 4 | Maximal 100</string>
    <string name="height_error_text">Die Höhe muss zwichen 4 \– 100 liegen!</string>

    <string name="width_helper_text_1">Mindestens 4 | Maximal 16</string>
    <string name="width_error_text">Die Breite muss zwichen 4 \– 16 liegen!</string>


    <string name="mine_helper_text_1">Bitte zuerst Höhe und Breite angeben!</string>
    <string name="mine_helper_text_2">Mindestens 1 | Maximal </string>
    <string name="mine_error_text_1_1">Die Anzahl der Minen muss zwischen 1 \- </string>
    <string name="mine_error_text_1_2"> liegen!</string>

    <string name="spiel_starten">Spiel starten</string>

    <string name="abbrechen">Abbrechen</string>
    <string name="keine_spieldaten_vorhanden">Keine Spieldaten vorhanden.</string>


    <!--Spielstatistiken-->
    <string name="highscores" translatable="false">Highscores</string>
    <string name="spielverlauf">Spielverlauf</string>

    <!-- GameSummaryCard -->
    <string name="gewonnen">Gewonnen</string>
    <string name="verloren">Verloren</string>

    <!-- Einstellungen -->
    <string name="einstellungen">Einstellungen</string>
    <string name="vibration">Vibration</string>
    <string name="spieldesign_auswaehlen">Spieldesign auswählen</string>
    <string name="timer_anzeigen">Timer anzeigen</string>
    <string name="minenanzahl_anzeigen">Minenanzahl anzeigen</string>
    <string name="modiwechsel_anzeigen">Modiwechsel anzeigen</string>
    <string name="flaggen_aktivieren">Flaggen aktivieren</string>
    <string name="hilfe_anzeigen">Spielhinweise anzeigen</string>

    <string name="spielstatistiken_loeschen">Spielstatistiken löschen</string>
    <string name="achtung">Achtung!</string>
    <string name="daten_koennen_nicht_wiederhergestellt">Die Daten können danach nicht mehr wiederhergestellt werden. Fortfahren?</string>
    <string name="spieldaten_geloescht">Die Spieldaten wurden gelöscht</string>



    <!-- Themes -->
    <string name="bordeaux">Bordeaux</string>
    <string name="blau">Blau</string>
    <string name="gruen">Grün</string>
    <string name="grau">Grau</string>
    <string name="classic">Klassisch</string>

    <!-- Spielhinweise -->
    <string name="erst_feld_aufdecken">Es muss erst ein Feld aufgedeckt werden</string>
    <string name="nicht_aufdecken_wenn_makiert">Kann nicht aufgdeckt werden, wenn markiert</string>
    <string name="maximale_minen_makiert">"Die maximale Anzahl an Minen wurde markiert"</string>
    <string name="keine_flagge_aufgedeckt_feld">"Keine Flagge auf aufgedecktem Feld möglich"</string>
    <string name="kein_fragezeiche_aufgedeckt_feld">Kein Fragezeichen auf aufgedecktem Feld möglich</string>

</resources>