<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameActivity">

    <ImageButton
        android:id="@+id/gameView_backToMenue"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:contentDescription="@string/zurueck_button"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/gameView_gameSettings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:contentDescription="@string/einstellungen"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/gameView_iconTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_settings_24" />

    <ImageButton
        android:id="@+id/gameView_resetGame"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="26dp"
        android:adjustViewBounds="false"
        android:background="@drawable/custom_shape_refresh_button"
        android:backgroundTint="?android:attr/textColorSecondary"
        android:contentDescription="@string/reset_game"
        android:rotation="-99"
        android:rotationX="-145"
        android:rotationY="33"
        android:tooltipText="Spiel neu starten"
        app:layout_constraintEnd_toStartOf="@+id/gameView_timer"
        app:layout_constraintStart_toEndOf="@+id/gameView_mineCounter"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_popup_sync" />

    <com.polyak.iconswitch.IconSwitch
        android:id="@+id/gameView_iconSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="10dp"
        app:isw_active_tint_icon_left="@color/white"
        app:isw_active_tint_icon_right="@color/white"
        app:isw_icon_left="@drawable/ic_mine"
        app:isw_icon_right="@drawable/ic_flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gameView_mineCounter"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginTop="45dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/gameView_iconMine"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameView_timer"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginTop="45dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/gameView_iconTimer"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gameView_iconMine"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/icon_mine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameView_backToMenue"
        app:srcCompat="@drawable/ic_mine" />

    <ImageView
        android:id="@+id/gameView_iconTimer"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/icon_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameView_gameSettings"
        app:srcCompat="@drawable/ic_timer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameView_GridContainerLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/gameView_iconSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameView_resetGame"
        app:layout_constraintVertical_bias="0.0">

        <de.fhswf.ma.ausarbeitung.kneissig.guenther.minesweeper.views.GameBoard
            android:id="@+id/gameView_minesweeperGridView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:drawSelectorOnTop="false"
            android:gravity="center"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="89dp"
        android:fontFamily="monospace"
        android:text="Minesweeper"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/gameView_gameSettings"
        app:layout_constraintStart_toEndOf="@+id/gameView_backToMenue"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

<!--    app:isw_active_tint_icon_right="?android:attr/textColorSecondary"-->
<!--    app:isw_active_tint_icon_left="?android:attr/textColorSecondary"-->