<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gameHistoryLayout">


    <TextView
        android:id="@+id/titleHighscore"
        android:layout_width="220dp"
        android:layout_height="46dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/highscores"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:background="@null"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="fitXY"
        android:tooltipText="Zurück zum Hauptmenü"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_east_24"
        android:contentDescription="@null" />

<!--   TODO: Vllt gar kein Hintergrund setzen mal Ivonne fragen-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="6dp"
        android:padding="4dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalStringPicker2"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/gameHistoryTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highscores" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/highScoresTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spielverlauf" />


    </com.google.android.material.tabs.TabLayout>

    <de.fhswf.ma.ausarbeitung.kneissig.guenther.minesweeper.views.LevelHorizontalStringPicker
        android:id="@+id/horizontalStringPicker2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleHighscore" />

    <TextView
        android:id="@+id/noGameDataTextview"
        android:layout_width="397dp"
        android:layout_height="39dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="374dp"
        android:gravity="center"
        android:text="@string/keine_spieldaten_vorhanden"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalStringPicker2" />


</androidx.constraintlayout.widget.ConstraintLayout>